fix color overlapping in sticky state

--- a/wp-content/themes/johndoe/src/scss/layout/_header.scss
+++ b/wp-content/themes/johndoe/src/scss/layout/_header.scss
@@ -20,7 +20,7 @@
 }
 
 .sticky .header {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
   position: fixed;
